# autoversion

./: AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: autostart.rs  config.rs  error.rs  events.rs  formats.rs  hash.rs  ignore.rs  lib.rs  main.rs  storage.rs  watcher.rs
src-tauri/src/commands/: actions.rs  config.rs  history.rs  mod.rs  status.rs
src/components/: AddFolderModal.tsx  ConfirmDialog.tsx  ExtensionPicker.tsx  TwoPaneLineDiff.tsx
src/components/ui/: button.tsx
src/i18n/: index.ts
src/i18n/locales/: en.json  pt-BR.json
src/lib/: events.ts  formats.ts  tauri.ts
