[package]
name = "autoversion"
version = "0.1.0"
description = "AutoVersion — automatic local file versioning"
authors = ["AutoVersion"]
edition = "2021"

[lib]
name = "autoversion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
# `tauri-build` is versioned independently from `tauri`; keep both on latest compatible 2.x.
tauri-build = { version = "2.6", features = [] }

[dependencies]
tauri = { version = "=2.11.1", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dirs = "6"

# Watcher: use `notify` only via `notify-debouncer-full`'s re-export to avoid duplicate `notify` versions.
notify-debouncer-full = "0.5"
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }
sha2 = "0.10"
globset = "0.4"
chrono = { version = "0.4", features = ["serde", "clock"] }

[profile.release]
strip = true
